--- a/templates/authors.html
+++ b/templates/authors.html
@@ -29,26 +29,41 @@
     </nav>
     
     
-    <h1 class="sensation">Тут будет список авторов или источников:</h1>
-    {% for author in authors %}
-        <div class="alert alert-info">{{ author }}</div>
-    {% endfor %}
+    <h1 class="text-center">Авторы или источники</h1>
+    <div class="row">
+        <div class="list-group col-lg-6 col-md-8 col-sm-10 col-10">
+            
+        {% for author in authors %}
+            <a href="#" class="list-group-item list-group-item-action list-group-item-primary">
+                {{ author }}
+            </a>
+        {% endfor %}
+        </div>
+    </div>
     <hr>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Автор или источник</th>
-                <th>Кол-во произведений</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for author in authors %}
+    <div class="table-responsive">
+        <table class="table table-striped table-borderless table-hover table-dark">
+            <thead>
                 <tr>
-                    <td>{{ author }}</td>
-                    <td>3</td>
+                    <th>Автор или источник</th>
+                    <th>Кол-во произведений</th>
+                    <th>Кол-во произведений</th>
+                    <th>Кол-во произведений</th>
+                    <th>Кол-во произведений</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for author in authors %}
+                    <tr>
+                        <td>{{ author }}</td>
+                        <td>3</td>
+                        <td>3</td>
+                        <td>3</td>
+                        <td>3</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
